--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "NDE5NDYwNDU1MDMyMDI5MTg1.DXwc6A.Pj1ezc-4KqWzu1ANRHx1yLmVi80",
+	"token": "Tocken",
 	"prefix": "mafu ",
 	"description": "Mafu here to serve you."
 }
